Manufactoring/force-app/main/default/objects/mfg_Production_Batch__c/mfg_Production_Batch__c.object-meta.xml
<CustomObject>
    <label>Production Batch</label>
    <nameField>
        <displayFormat>PB-{0000000000}</displayFormat>
        <label>Production Batch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Batches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>