Manufactoring/force-app/main/default/objects/mfg_Production_Batch__c/fields/mfg_End_Time__c.field-meta.xml
<CustomField>
    <fullName>mfg_End_Time__c</fullName>
    <label>End Time</label>
    <type>Date</type>
</CustomField>