Manufactoring/force-app/main/default/objects/mfg_Production_Batch__c/fields/mfg_Notes__c.field-meta.xml
<CustomField>
    <fullName>mfg_Notes__c</fullName>
    <label>Notes</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>