Manufactoring/force-app/main/default/objects/mfg_Production_Batch__c/fields/mfg_Planned_Quantity__c.field-meta.xml
<CustomField>
    <fullName>mfg_Planned_Quantity__c</fullName>
    <label>Planned Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>