Manufactoring/force-app/main/default/objects/mfg_Production_Batch__c/fields/mfg_Product__c.field-meta.xml
<CustomField>
    <fullName>mfg_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Production Batches</relationshipLabel>
    <relationshipName>Production_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>