Manufactoring/force-app/main/default/objects/mfg_Production_Batch__c/fields/mfg_Production_Order__c.field-meta.xml
<CustomField>
    <fullName>mfg_Production_Order__c</fullName>
    <label>Production Order</label>
    <referenceTo>mfg_Production_Order__c</referenceTo>
    <relationshipLabel>Production Batches</relationshipLabel>
    <relationshipName>Production_Batches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>