Manufactoring/force-app/main/default/objects/mfg_Production_Batch__c/fields/mfg_QC_Report__c.field-meta.xml
<CustomField>
    <fullName>mfg_QC_Report__c</fullName>
    <label>QC Report</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>