Manufactoring/force-app/main/default/objects/mfg_Production_Batch__c/fields/mfg_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>mfg_Start_Time__c</fullName>
    <label>Start Time</label>
    <type>Date</type>
</CustomField>