Manufactoring/force-app/main/default/objects/mfg_Production_Batch__c/fields/mfg_Units_Passed_QC__c.field-meta.xml
<CustomField>
    <fullName>mfg_Units_Passed_QC__c</fullName>
    <label>Units Passed QC</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>