Manufactoring/force-app/main/default/objects/mfg_Production_Batch__c/fields/mfg_Units_Scrapped__c.field-meta.xml
<CustomField>
    <fullName>mfg_Units_Scrapped__c</fullName>
    <label>Units Scrapped</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>