Manufactoring/force-app/main/default/objects/mfg_Production_Batch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>mfg_Production_Order__c</columns>
    <columns>mfg_Status__c</columns>
    <columns>mfg_Product__c</columns>
    <columns>mfg_Planned_Quantity__c</columns>
    <columns>mfg_Units_Produced__c</columns>
    <columns>mfg_Units_Passed_QC__c</columns>
    <columns>mfg_Units_Scrapped__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>